--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.6",
     "classnames": "^2.5.1",
     "core-js": "^3.39.0",
@@ -35,6 +36,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
     "redux": "5.0.1",
     "simplebar-react": "^3.2.6"
   },
