--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@coreui/react": "^5.4.1",
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^5.16.11",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.9",
     "chart.js": "^4.4.6",
@@ -35,8 +38,10 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "react-select": "^5.8.3",
     "react-toastify": "^10.0.6",
     "redux": "5.0.1",
     "simplebar-react": "^3.2.6"
@@ -55,7 +60,7 @@
     "vite": "^5.4.11"
   },
   "engines": {
-  "node": ">=16 <19",
-  "npm": ">=7"
-}
+    "node": ">=16 <19",
+    "npm": ">=7"
+  }
 }
