--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.9.3",
+    "react-icons": "^5.4.0",
     "react-paginate": "^8.2.0",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-select": "^5.8.3",
@@ -56,7 +59,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8.4.49",
     "prettier": "3.3.3",
-    "sass": "^1.81.0",
+    "sass": "^1.83.0",
     "vite": "^5.4.11"
   },
   "engines": {
