--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^5.16.11",
     "@popperjs/core": "^2.11.8",
+    "@redux-devtools/extension": "^3.3.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.6",
     "classnames": "^2.5.1",
@@ -48,6 +49,7 @@
     "react-select": "^5.8.3",
     "react-toastify": "^10.0.6",
     "redux": "5.0.1",
+    "redux-thunk": "^3.1.0",
     "simplebar-react": "^3.2.6"
   },
   "devDependencies": {
